// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuSelect applies translations 1`] = `
<select
  className="select"
  onChange={[Function]}
  value="ais__see__all__option"
>
  <option
    className="option"
    value="ais__see__all__option"
  >
    Everything
  </option>
  <option
    className="option"
    value="white"
  >
    white
     (
    10
    )
  </option>
  <option
    className="option"
    value="black"
  >
    black
     (
    20
    )
  </option>
  <option
    className="option"
    value="blue"
  >
    blue
     (
    30
    )
  </option>
  <option
    className="option"
    value="green"
  >
    green
     (
    30
    )
  </option>
  <option
    className="option"
    value="red"
  >
    red
     (
    30
    )
  </option>
</select>
`;

exports[`MenuSelect default menu select 1`] = `
<select
  className="select"
  onChange={[Function]}
  value="ais__see__all__option"
>
  <option
    className="option"
    value="ais__see__all__option"
  >
    See all
  </option>
  <option
    className="option"
    value="white"
  >
    white
     (
    10
    )
  </option>
  <option
    className="option"
    value="black"
  >
    black
     (
    20
    )
  </option>
  <option
    className="option"
    value="blue"
  >
    blue
     (
    30
    )
  </option>
  <option
    className="option"
    value="green"
  >
    green
     (
    30
    )
  </option>
  <option
    className="option"
    value="red"
  >
    red
     (
    30
    )
  </option>
</select>
`;
